--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-
+buildscript {
+    ext {
+        nav_version = "2.5.2"
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+    plugins {
+        id 'com.android.application' version '7.3.0' apply false
+        id 'com.android.library' version '7.3.0' apply false
+        id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+
+    }
+
+    task clean(type: Delete) {
+        delete rootProject.buildDir
+    }
